Prevent footer from overlapping with body

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,8 @@
 @import "museums";
 @import "categories";
 @import "devise";
-body { font-family: 'Muli', Arial, serif; font-weight: 400;
-      background:none;
+body { font-family: 'Muli', Arial, serif;
+		font-weight: 400;
+     	background:none;
+     	min-height:200px;
  }
